# computer-network

./: 2011428-密码科学与技术-王天行-第k次试验报告.docx  README.md
computer-network/Lab/: 实验报告模板-网络安全.doc
computer-network/Lab/RSA/: 实验报告.doc
computer-network/Lab/des-tcp/: 2011428-王天行-实验一.rar  实验报告.doc
computer-network/Lab/lab1/: client.cpp  实验报告.docx
computer-network/Lab/lab2/: 实验报告.docx
computer-network/Lab/lab3/3-2/code/: CMakeLists.txt  client.cpp  define.h  rdt3.h  server.cpp
computer-network/Lab/网技-EX1/: 交换式.pkt
computer-network/Lab/网技-EX2/: 抓包.cpp
computer-network/Lab/网技-EX3/: hhh.h
computer-network/Lab/网技-EX4/: 动态路由.pkt  静态路由.pkt
computer-network/Lab/网技-EX5/: 2011428-密码科学与技术-王天行-第5次试验报告.docx
computer-network/Lab/网技-EX6/: 2011428-密码科学与技术-王天行-第6次试验报告.docx
computer-network/Lab/网技-EX7/: 2011428-密码科学与技术-王天行-第7次试验报告.docx  拓展ACL.pkt  标准ACL.pkt
computer-network/Lab/网技-EX8/: 2011428-密码科学与技术-王天行-第8次试验报告.docx  pppoe.pkt  新建文本文档.txt
computer-network/Lab/网技讨论6/: 课堂测试与研讨（6） .docx
computer-network/Lab/计网-书面作业1/: 2022-书面作业一.docx  问题二.docx
computer-network/Lab/计网-书面作业2/: 2011428王天行.docx  2022-书面作业2.docx
computer-network/PPT/: 02-计算机网络-第二章-2022（02-1).pptx
计算机网络/: 网技-实验1.docx  计网-实验1.docx
计算机网络/Lab/网技-EX1/: 2011428-密码科学与技术-王天行-第1次试验报告.docx  交换式.pkt  共享式.pkt  实验报告.docx
计算机网络/Lab/网技-EX2/: 实验报告.docx
计算机网络/Lab/网技-EX3/: 2011428-密码科学与技术-王天行-第3次试验报告.docx
计算机网络/Lab/网技-EX4/: 2011428-密码科学与技术-王天行-第4次试验报告.docx
计算机网络/Lab/网技-EX5/: 2011428-密码科学与技术-王天行-第5次试验报告.docx
计算机网络/PPT/: 02-计算机网络-第二章-2022（02-2).pptx  实验2.pptx
计算机网络/计网-EX1/: 实验报告.docx
(+222 files in other folders)
